# cloth-funnels

./: .gitignore  README.md  demo_single.sh  download_cloth_data.sh  download_models.sh  download_sample.sh  download_tasks.sh  environment.yml  pyproject.toml  setup.cfg  setup.py
cloth_funnels/: .gitignore  pc_vis.py  rendering_util.py  replay_buffer_to_video.py  run_folding.py  run_real_env.py  run_sim.py  view_transform_picker.py  visualize_rewards.py
cloth_funnels/cloth_data/: filter_shirts.ipynb
cloth_funnels/conf/: config.yaml
cloth_funnels/environment/: __init__.py  filter_shirts.ipynb  flex_utils.py  simEnv.py  visualize.py
cloth_funnels/figure_scripts/: .gitignore  generate_ur5_trajectories.py  get_data.sh  gripper.py  parse_data.py  ur5.py
cloth_funnels/keypoint_detector/: keypoint_inference.py  keypoint_labeler.py  keypoint_video_generator.py  keypoint_vis_callback.py  train.py
cloth_funnels/learning/: Memory.py  __init__.py  gui_utils.py  nets.py  nocs_unet.py  nocs_unet_data.py  nocs_unet_inference.py  nocs_unet_train.py  optimization.py  pretrain.py  unet_parts.py  utils.py
cloth_funnels/notebooks/: direction_map.ipynb  evaluate_fold_multi.ipynb  merge_hdf5.ipynb  positions.ipynb  probe.ipynb  probe_buffer.ipynb  reach_validity.ipynb  replay_buffer_analysis.py  success_evaluation.ipynb  transform.ipynb  transform_test.ipynb  visualization_utils.py  visualize_real.ipynb  visualize_tasks.ipynb
cloth_funnels/real/: calibration_robot.py  calibration_table.py  random_action.py  realEnv.py  real_test_grid.py  realsense.py  reset_task.py  setup.py  (+1 more)
(+449 files in other folders)
